--- a/css/style.css
+++ b/css/style.css
@@ -9,4 +9,12 @@
 #hero {
   padding-bottom: 20rem;
   padding-top: 20rem;
+  background: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)),
+    url("../Assets/Image/pexels-trksami-14814440.jpg") no-repeat center/cover;
+  width: 100%;
+  min-height: 100vh;
+}
+.btn-square {
+  border-radius: 0%;
+  padding: 1rem 3rem;
 }
